[package]
name = "cs2_rust_internal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.25"
once_cell = "1.19"
bitflags = "2.4"

# DX11 ImGui overlay: use a maintained hook library instead of a missing imgui-dx11 crate
imgui = "0.12"
hudhook = { version = "0.8.3", default-features = false, features = ["dx11"] }
anyhow = "1.0"
obfstr = "0.4"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Memory",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
